k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tictactoe
  namespace: tictactoe
  labels:
    app: tictactoe
spec:
  type: ClusterIP
  selector:
    app: tictactoe
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
